--- a/components/about/About.css
+++ b/components/about/About.css
@@ -60,3 +60,46 @@
     background: rgb(13, 76, 147);
     background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
 }
+
+@media screen and (max-width:1200px) {
+    .about_page_container {
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .about_page_text {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .about_page_img {
+        width: 50%;
+        height: auto;
+        background-color: #fff;
+        background-color: transparent;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .about_page_img img {
+        width: 100%;
+        height: auto;
+    }
+
+    .about_page_text p {
+        width: 100%;
+        font-size: 20px;
+        font-weight: 350;
+        text-align: center;
+        word-wrap: break-word;
+    }
+
+    .about_page_text button {
+        width: 100%;
+    }
+}
