--- a/components/news/News.css
+++ b/components/news/News.css
@@ -1,6 +1,6 @@
 .news_page {
     width: 100%;
-    height: 900px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,48 +23,6 @@
     position: relative;
 }
 
-.news_page_box {
-    width: 380px;
-    height: 420px;
-    background: rgb(248, 248, 248);
-    background: linear-gradient(360deg, rgba(248, 248, 248, 0.439) 0%, rgba(248, 248, 248, 1) 100%);
-    border-radius: 35px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    transition: all .3s ease;
-    cursor: pointer;
-}
-
-.news_page_box:hover {
-    transform: scale(1.03);
-    transition: all .3s ease;
-}
-
-.news_page_box img {
-    border-radius: 35px;
-    position: absolute;
-    cursor: pointer;
-    top: -120px;
-}
-
-.news_page_box a {
-    width: 90%;
-    margin-top: 110px;
-    font-size: 20px;
-    text-align: center;
-    font-weight: 370;
-    color: #0D4C93;
-}
-
-.news_page_box h6 {
-    font-size: 18px;
-    font-weight: 380;
-    color: #0D4C93;
-}
-
 .news_page p {
     font-size: 17px;
     font-weight: 360;
@@ -73,7 +31,7 @@
 }
 
 .news_page button {
-    width: 300px;
+    width: 80%;
     height: 60px;
     color: #fff;
     border: none;
@@ -85,6 +43,7 @@
     background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
     cursor: pointer;
     bottom: -30px;
+    left: 40px;
 }
 
 .news_page-right {
@@ -125,7 +84,7 @@
 }
 
 .news_page-links a {
-    font-size: 28px;
+    font-size: 20px;
     color: #0D4C93;
     display: flex;
     align-items: center;
@@ -133,7 +92,88 @@
     transition: .3s;
 }
 
+@media screen and (max-width:600px) {
+    .news_page-links a {
+        font-size: 15px;
+        color: #0D4C93;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        transition: .3s;
+        white-space: nowrap;
+    }
+
+    .news_page-links {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
 .news_page-links a:hover {
     color: #00C9C9;
     transition: .3s;
+}
+
+
+
+.news_page .swiper {
+    width: 100%;
+    height: auto;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    position: relative;
+    background-color: transparent;
+}
+
+.news_page .swiper-wrapper {
+    width: 100%;
+    height: auto;
+    padding: 100px 00px;
+}
+
+
+.news_page .swiper-slide {
+    height: auto;
+    background: rgb(248, 248, 248);
+    background: linear-gradient(360deg, rgba(248, 248, 248, 0.439) 0%, rgba(248, 248, 248, 1) 100%);
+    border-radius: 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    position: relative;
+    transition: all .3s ease;
+    cursor: pointer;
+    padding: 120px 0px 40px 0px;
+}
+
+
+.news_page .swiper-slide:hover {
+    transform: scale(1.03);
+    transition: all .3s ease;
+}
+
+.news_page .swiper-slide img {
+    width: 100%;
+    border-radius: 35px;
+    position: absolute;
+    cursor: pointer;
+    top: -100px;
+}
+
+.news_page .swiper-slide a {
+    width: 100%;
+    font-size: 20px;
+    text-align: center;
+    font-weight: 370;
+    color: #0D4C93;
+}
+
+.news_page .swiper-slide h6 {
+    font-size: 18px;
+    font-weight: 380;
+    color: #0D4C93;
 }
