--- a/components/partners/Partners.css
+++ b/components/partners/Partners.css
@@ -1,11 +1,12 @@
 .partners_page {
     width: 100%;
-    height: 400px;
+    height: auto;
     background-color: transparent;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    padding-bottom: 100px;
 }
 
 .partners_page h1 {
@@ -14,7 +15,7 @@
     font-weight: 470;
 }
 
-.partners_page_container {
+/* .partners_page_container {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -24,11 +25,12 @@
     position: relative;
     background-color: transparent;
 
-}
+} */
+
 
 
 .partners_page_box {
-    width: 275px;
+    width: 100%;
     height: 130px;
     display: flex;
     align-items: center;
@@ -78,5 +80,24 @@
     color: #fff;
     cursor: pointer;
     top: 40%;
+}
 
+.partners_page .swiper {
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: red;
+}
+
+.partners_page .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    height: calc((100% - 100px) / 2) !important;
+
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
