--- a/components/service/Service.css
+++ b/components/service/Service.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 60px;
+    padding-bottom: 100px;
     gap: 50px;
 }
 
@@ -16,6 +16,9 @@
     width: 100%;
     height: 680px;
     background-image: url("../../public/assets/service/background.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .service_page-container {
@@ -24,6 +27,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+
 }
 
 .service_page_box {
@@ -84,4 +88,70 @@
     background: rgb(13, 76, 147);
     background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
     bottom: -30px;
+}
+
+@media screen and (max-width:1200px) {
+    .service_page-container {
+        height: auto;
+        flex-direction: column;
+        gap: 50px;
+        padding: 100px 30px;
+    }
+
+    .service_page {
+        height: auto;
+    }
+
+    .service_page_box {
+        width: 40%;
+        height: auto;
+        background-color: #fff;
+        border-radius: 35px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        position: relative;
+        padding-bottom: 50px;
+        transition: all .3s ease;
+    }
+
+    .service_page_box button {
+        width: 70%;
+        padding: 13px;
+        height: auto;
+    }
+
+}
+
+@media screen and (max-width:750px) {
+    .service_page_box {
+        width: 75%;
+    }
+
+    .service_page_box h5 {
+        text-align: center;
+        font-size: 17px;
+        color: #0D4C93;
+        font-weight: 400;
+    }
+
+}
+
+@media screen and (max-width:500px) {
+    .service_page_box {
+        width: 95%;
+        padding-bottom: 20px;
+    }
+
+    .service_page_box button {
+        width: 70%;
+        padding: 15px;
+        height: auto;
+        font-size: 13px;
+    }
+
+    .service_page_box p {
+        width: 100%;
+    }
 }
