--- a/components/service/Service.css
+++ b/components/service/Service.css
@@ -85,8 +85,8 @@
     border-radius: 35px;
     font-size: 20px;
     position: absolute;
-    background: rgb(13, 76, 147);
-    background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
+    background: var(--bg-blue);
+    background: var(--bg-blue-lg);
     bottom: -30px;
 }
 
