--- a/components/about/About.css
+++ b/components/about/About.css
@@ -17,8 +17,8 @@
 .about_page_container {
     width: 100%;
     border-radius: 35px;
-    background: rgb(248, 248, 248);
-    background: linear-gradient(100deg, rgba(248, 248, 248, 0.439) 0%, rgba(248, 248, 248, 1) 100%);
+    background: var(--white-bg);
+    background: var(--white-bg-lg);
     height: 500px;
     display: flex;
     align-items: center;
@@ -57,8 +57,8 @@
     cursor: pointer;
     border: none;
     outline: none;
-    background: rgb(13, 76, 147);
-    background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
+    background: var(--bg-blue);
+    background: var(--bg-blue-lg);
 }
 
 @media screen and (max-width:1200px) {
