--- a/components/mainpage/MainPage.css
+++ b/components/mainpage/MainPage.css
@@ -41,8 +41,8 @@
     width: 270px;
     height: 70px;
     font-size: 24px;
-    background: rgb(13, 76, 147);
-    background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
+    background: var(--bg-blue);
+    background: var(--bg-blue-lg);
     border: none;
     outline: none;
     color: #fff;
@@ -152,8 +152,8 @@
         width: 200px;
         height: 50px;
         font-size: 20px;
-        background: rgb(13, 76, 147);
-        background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
+        background: var(--bg-blue);
+        background: var(--bg-blue-lg);
         border: none;
         outline: none;
         color: #fff;
