--- a/components/partners/Partners.css
+++ b/components/partners/Partners.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 
 .partners_page h1 {
@@ -15,7 +15,7 @@
     font-weight: 470;
 }
 
-/* .partners_page_container {
+.partners_page_container {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -25,12 +25,11 @@
     position: relative;
     background-color: transparent;
 
-} */
-
+}
 
 
 .partners_page_box {
-    width: 100%;
+    width: 275px;
     height: 130px;
     display: flex;
     align-items: center;
@@ -51,8 +50,8 @@
 .partner_page-right {
     width: 50px;
     height: 50px;
-    background: rgb(13, 76, 147);
-    background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
+    background: var(--bg-blue);
+    background: var(--bg-blue-lg);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,8 +67,8 @@
 .partner_page-left {
     width: 50px;
     height: 50px;
-    background: rgb(13, 76, 147);
-    background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
+    background: var(--bg-blue);
+    background: var(--bg-blue-lg);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -80,24 +79,37 @@
     color: #fff;
     cursor: pointer;
     top: 40%;
+
 }
 
-.partners_page .swiper {
-    width: 100%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: red;
+@media screen and (max-width:1200px) {
+    .partners_page_container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
 }
 
-.partners_page .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    height: calc((100% - 100px) / 2) !important;
+@media screen and (max-width:900px) {
+    .partners_page_container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
 
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+}
+
+@media screen and (max-width:600px) {
+    .partners_page_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .partner_page-right {
+        display: none;
+    }
+
+    .partner_page-left {
+        display: none;
+    }
 }
