--- a/components/product/Product.css
+++ b/components/product/Product.css
@@ -37,8 +37,8 @@
     gap: 30px;
     border-radius: 50px;
     position: relative;
-    background: rgb(248, 248, 248);
-    background: linear-gradient(349deg, rgba(248, 248, 248, 0.439) 0%, rgba(248, 248, 248, 1) 100%);
+    background: var(--bg-white);
+    background: var(--bg-white-lg);
     cursor: pointer;
     transition: .3s;
     padding: 20px;
@@ -59,8 +59,8 @@
 .product_page-box button {
     width: 270px;
     height: 70px;
-    background: rgb(13, 76, 147);
-    background: linear-gradient(131deg, rgba(13, 76, 147, 1) 14%, rgba(0, 201, 201, 1) 89%);
+    background: var(--bg-blue);
+    background: var(--bg-blue-lg);
     font-size: 23px;
     color: #fff;
     border: none;
